- Fixed repository name and content path reference for JCR content in the
  ContentResourceReference class
- Fixed file upload temporary file being deleted before being accessed/used
- Fixed link with link-type=hidden-form within a form-single to not produce
  HTML with nested form elements
- Fixed anonymous-all and anonymous-view authenticate options for services
  to login as the _NA_ user so the called services requiring authentication
  and permission will run as expected
- Fixed display.@currency-unit-field attribute handling
- Fixed XML Actions filter-map-list operation, wasn't quoting field names

===========================================================================
Release 1.1.1 - 22 Sep 2012
===========================================================================

The 1.1.1 release of Moqui Framework is primarily a bug fix release. While
a few issues have been fixed the most important one for those just trying
Moqui is the explicit sorting of files by name during data loading which
addresses an issue on Linux servers where the files in a directory listing
through the Java File API can come back in any order.

Minor new features include DB configured User Fields on entities, host name
based tenant selection, and an easier way to specify default themes.

This release includes:

- User Field support for transparent user-defined fields with a definition
  in the database (using the UserField entity) and values for the fields
  isolated to groups of users stored in a separate table (using the
  UserFieldValue entity)
- Option to specify a default tenantId for a given host name
  (request.getServerName()) in the database, using the TenantHostDefault
  entity for deployment of tenants with a virtual host approach
- Can now specify the default screenThemeId for a ScreenThemeType
  Enumeration record using the Enumeration.enumCode field

Bug Fixes:

- fixed data file load order to explicitly sort files in data directories